fix the courses alignment

--- a/public/css/courses.css
+++ b/public/css/courses.css
@@ -1,12 +1,14 @@
 /* =================== COURSES ===================== */
 .courses{
     font-size: 2rem;
+    margin: 50px auto;
+    text-align: center;
 }
 
 .courses__container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center; 
     gap: 30px;
 }
 
